@@ -1,4 +1,4 @@
-### Solution
+## Solution
 
 As a DevOps engineer it is my responsiblity to support the Software Engineering staff
 and not to write applications for them.
@@ -6,5 +6,9 @@ and not to write applications for them.
 My solution is to take example code and modify it as I would if I was helping
 the engineering team solve this problems, as it is rare that a DevOps engineer should
 have to originate the solution to purely business application requirement.
+
+### Golang Project
+
+### Python Project
 
 
