@@ -5,8 +5,6 @@
    https://www.hackerrank.com/challenges/validating-credit-card-number/problem
 */
 
-
-
 package main
 
 import (
