@@ -1,0 +1,21 @@
+/* Example credit to
+   https://www.golangprograms.com/regular-expression-to-validate-common-credit-card-numbers.html
+
+   Modified to support the example requirements of
+   https://www.hackerrank.com/challenges/validating-credit-card-number/problem
+*/
+
+package main
+
+import (
+	"fmt"
+)
+
+/* TODO: Parse some command line args and provide some useful output */
+func main() {
+	/* TODO: Support passing command line file arg */
+	scan_file()
+
+	fmt.Printf("Scanning Complete\n")
+}
+
